--- a/NoteDemo/app/src/main/res/values/strings.xml
+++ b/NoteDemo/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">NoteDemo</string>
     <string name="action_settings">Settings</string>
+    <string name="preview_word_close">关闭</string>
 </resources>
