--- a/NoteDemo/app/src/main/res/values/strings.xml
+++ b/NoteDemo/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">NoteDemo</string>
     <string name="action_settings">Settings</string>
     <string name="preview_word_close">关闭</string>
+    <string name="preview_word_look">查看</string>
 </resources>
