--- a/NoteDemo/app/src/main/res/values/strings.xml
+++ b/NoteDemo/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="preview_word_close">关闭</string>
     <string name="preview_word_look">查看</string>
+    <string name="preview_move_toast">可以移动标记到你需要的位置</string>
 </resources>
