--- a/NoteDemo/app/src/main/res/values/strings.xml
+++ b/NoteDemo/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="preview_tuya_close_cancel">取消</string>
     <string name="preview_tuya_save_title">确认保存本次标记内容?</string>
     <string name="preview_tuya_erase_all_title">确认删除本次全部标记内容?</string>
+    <string name="preview_word_cancel_all_title">确认放弃本次文本修改吗?</string>
+    <string name="preview_delete_current_txt">确认删除当前标记?</string>
+    <string name="preview_delete_all_txt">确认删除所有标记?</string>
 </resources>
