管理页面提示

--- a/NoteDemo/app/src/main/res/values/strings.xml
+++ b/NoteDemo/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="preview_delete_current_txt">确认删除当前标记?</string>
     <string name="preview_delete_all_txt">确认删除所有标记?</string>
     <string name="preview_can_not_empty">内容不能为空</string>
+    <string name="preview_tuya_empty">当前无标记</string>
+    <string name="preview_word_empty">当前无文字笔记</string>
 </resources>
